--- a/hosting/package.json
+++ b/hosting/package.json
@@ -10,6 +10,7 @@
     "firebase": "^7.15.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-geolocated": "^3.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
