--- a/hosting/package.json
+++ b/hosting/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.0",
     "firebase": "^7.15.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-geolocated": "^3.0.1",
     "react-router-dom": "^5.2.0",
