--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
     "fs": "0.0.1-security",
+    "micro-cors": "^0.1.1",
     "node-fetch": "^2.6.0",
     "q": "^1.5.1",
     "randomstring": "^1.1.5",
