--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Visa Please",
-  "name": "Your friend during the pandemic",
+  "name": "Visa Please | Your friend during the pandemic",
   "icons": [
     {
       "src": "favicon.ico",
