--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "bootstrap": "^4.5.0",
     "firebase": "^7.15.3",
     "google-map-react": "^1.1.7",
+    "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-geolocated": "^3.0.1",
     "react-google-maps": "^9.4.5",
+    "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "universal-cookie": "^4.0.3"
