Fix failed build

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ bower_components
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
-
+build/
 # Dependency directories
 node_modules/
 
@@ -68,3 +68,4 @@ node_modules/
 yarn.lock
 .vercel
 src/config.js
+package-lock.json
