--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Visa Please",
-  "name": "Visa Please | Your friend during the pandemic",
+  "short_name": "VRecover",
+  "name": "VRecover | Your friend during the pandemic",
   "icons": [
     {
       "src": "favicon.ico",
