Add background to favicon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "VRecover",
-  "name": "VRecover | Your friend during the pandemic",
+  "name": "VRecover",
   "icons": [
     {
       "src": "favicon.ico",
