--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "universal-cookie": "^4.0.3"
+    "universal-cookie": "^4.0.3",
+    "uuidv4": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
