--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "leaflet": "^1.6.0",
     "node-sass": "4.14.1",
     "react": "^16.13.1",
+    "react-awesome-spinners": "^1.3.1",
     "react-bootstrap": "^1.0.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
@@ -21,6 +22,7 @@
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1",
     "universal-cookie": "^4.0.3",
     "uuidv4": "^6.1.1"
   },
